# QT-Cmake-Demo

./: .gitignore  README.md
Dummy/: CMakeLists.txt
